--- a/src/aura/ActionDetailsDynamicRow/ActionDetailsDynamicRow.css
+++ b/src/aura/ActionDetailsDynamicRow/ActionDetailsDynamicRow.css
@@ -5,7 +5,7 @@
     width : 20px;
     height :29px;
     margin-right: 23px;
-    margin-top: 8px;
+    margin-top: 18px;
     margin-bottom: 16px;
 }
 .THIS .marginTop {
@@ -13,4 +13,20 @@
 }
 .THIS .dateTimeElement .slds-form_compound .slds-form-element__row .slds-form-element__label {
     display: none;
+}
+.THIS .rdna-input{
+    width: 300px;
+    height: 30px;
+    border-radius: 6px;
+    border: solid 1px #979797;
+}
+/*.THIS .slds-select{
+    width: 300px !important;
+    height: 32px !important;
+    margin-left: 18px !important;
+    border-radius: 6px !important;
+    border: solid 1px #979797;
+}*/
+.THIS .rdna-value-padding{
+    padding-left: 20px !important;
 }
