Code committed for SFDC-407 , 408 and 414.

--- a/src/aura/ActionBuilder/ActionBuilder.cmp
+++ b/src/aura/ActionBuilder/ActionBuilder.cmp
@@ -34,6 +34,8 @@
     <aura:attribute name="activationtypeList" type="List" default="['Automatic', 'Manual']" />
     <aura:attribute name="isTaskAction" type="boolean" default="false"/>
     <aura:attribute name="isSMSAction" type="boolean" default="false"/>
+    <aura:attribute name="isNextEnable" type="boolean" default="false"/>
+    
     <aura:attribute name="currentStep" type="string" default="1"/>
     <aura:attribute type="List" name="rowActionTemplateList"/>
     
@@ -57,7 +59,12 @@
             <div>
                 <lightning:button class="rdna-button rdna-button-text slds-text-align_center slds-m-top_large  slds-m-right_medium slds-p-left_large slds-p-right_large" aura:id="cancel" label="Cancel" onclick="{!c.onCancel}"/>
             </div>
-            <aura:if isTrue = "{!v.currentStep == '2' || v.currentStep == 2}" >
+            <aura:if isTrue = "{!v.isNextEnable}">
+                <div>
+                    <lightning:button class="rdna-button-save rdna-button-text-save slds-text-align_center slds-m-top_large slds-p-left_large slds-p-right_large slds-m-right_large" aura:id="Next" label="Next" onclick="{!c.onNext}"/>
+                </div>
+            </aura:if>
+            <aura:if isTrue = "{!and(or(v.currentStep == '2' , v.currentStep == 2) , not(v.isNextEnable) ) }" >
             <div>
                 <lightning:button class="rdna-button-save rdna-button-text-save slds-text-align_center slds-m-top_large slds-p-left_large slds-p-right_large slds-m-right_large" aura:id="deleteActions" label="Save" onclick="{!c.createAction}"/>
             </div>
@@ -67,7 +74,7 @@
         <!-- Body Start -->
        <!-- CREATE NEW ACTION FORM -->
         <aura:if isTrue = "{!v.currentStep == '1' || v.currentStep == 1}" >          
-            <c:ActionDetails aura:id="newActionDetail" newAction = "{!v.newAction}" disableActionType = "{!v.disableActionType}" currentStep ="{!v.currentStep}" isTaskAction="{!v.isTaskAction}" isSMSAction="{!v.isSMSAction}" rowActionTemplateList="{!v.rowActionTemplateList}"/>       
+            <c:ActionDetails aura:id="newActionDetail" newAction = "{!v.newAction}" disableActionType = "{!v.disableActionType}" isNextEnable="{!v.isNextEnable}" currentStep ="{!v.currentStep}" isTaskAction="{!v.isTaskAction}" isSMSAction="{!v.isSMSAction}" rowActionTemplateList="{!v.rowActionTemplateList}"/>       
         </aura:if>
         <aura:if isTrue = "{!v.currentStep == '2' || v.currentStep == 2}" >
             <aura:if isTrue = "{!v.isTaskAction}">
@@ -83,17 +90,24 @@
                                                   rowActionTemplateList="{!v.rowActionTemplateList}" 
                                                   isSMSAction="{!v.isSMSAction}"/>
                             <aura:set attribute="else">
-                           <p class="slds-page-header__row slds-m-top_large slds-truncate slds-align_absolute-center rdna-sub-header-bold" >Call Notes Templates</p>
-                           <p class="slds-align_absolute-center  rdna-sub-header" style="padding-top:15px;">Create pre-configured Call Notes Templates.</p>
-                           <p class="slds-align_absolute-center slds-m-bottom_large rdna-sub-header-small" style="padding-top:5px;">There are currently no pre-configured Call Notes Templates associated to this account. (Optional)</p>
-                            <c:ActionTemplateList newAction="{!v.newAction}" 
-                                                  spinner="{!v.spinner}"
-                                                  rowActionTemplateList="{!v.rowActionTemplateList}" 
-                                                  isSMSAction="{!v.isSMSAction}"/>
+                                <aura:if isTrue = "{!v.newAction.type == 'Call'}">
+                                    <p class="slds-page-header__row slds-m-top_large slds-truncate slds-align_absolute-center rdna-sub-header-bold" >Call Notes Templates</p>
+                                    <p class="slds-align_absolute-center  rdna-sub-header" style="padding-top:15px;">Create pre-configured Call Notes Templates.</p>
+                                    <p class="slds-align_absolute-center slds-m-bottom_large rdna-sub-header-small" style="padding-top:5px;">There are currently no pre-configured Call Notes Templates associated to this account. (Optional)</p>
+                                    <c:ActionTemplateList newAction="{!v.newAction}" 
+                                                          spinner="{!v.spinner}"
+                                                          rowActionTemplateList="{!v.rowActionTemplateList}" 
+                                                          isSMSAction="{!v.isSMSAction}"/>
+                                </aura:if>
                             </aura:set>
                         </aura:if>
                     </div>
                 </aura:set>
+            </aura:if>
+            <aura:if isTrue = "{!v.newAction.type == 'Email'}">
+                <c:EmailActionBuilder aura:id="newActionDetail" newAction = "{!v.newAction}" disableActionType = "{!v.disableActionType}" 
+                                      isValidationError="{!v.isValidationError}" ValidationError="{!v.ValidationError}"
+                                      currentStep ="{!v.currentStep}"/>       
             </aura:if>
         </aura:if>
         
