--- a/src/aura/ActionDetails/ActionDetails.css
+++ b/src/aura/ActionDetails/ActionDetails.css
@@ -170,3 +170,9 @@
     border-radius: 10px;
     background-color: #ffffff;
 }
+.THIS .rdna-name{
+    margin-left : 35px;    
+}
+.THIS .rdna-name-styling{
+    margin-left : 70px;
+}
